Ajustando documentação e correção de bugs
